gap issue in farm table fixed

--- a/src/pages/Farms/Farms.css
+++ b/src/pages/Farms/Farms.css
@@ -45,7 +45,7 @@
 
 .farm_table_row {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 24px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 24px;
   gap: 20px;
   padding: 20px 26px;
   text-align: center;
@@ -54,7 +54,7 @@
 
 .farm_table_header {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr 1fr 24px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 24px;
   gap: 20px;
   padding: 20px 26px;
   text-align: center;
@@ -118,6 +118,16 @@
   width: 100%;
   margin-top: 10px;
   margin-bottom: 20px;
+}
+
+@media (max-width: 1280px) {
+  .farm_table_row {
+    grid-template-columns: 1.5fr 1fr 1fr 1fr 24px;
+  }
+
+  .farm_table_header {
+    grid-template-columns: 1.5fr 1fr 1fr 1fr 24px;
+  }
 }
 
 @media (max-width: 768px) {
